# guardian

./: .gitignore  README.md  invalid_example.csv  pipeline_tasks.py  pyproject.toml  valid_example.csv
docker/data/data/: settings.js  users.js
docker/data/data/repositories/GuardianExample/: config.ttl
docker/data/data/repositories/GuardianExample/storage/: entities  entities-doc  entities.datatypes  entities.datatypes.strings  owlim.properties  pos  pos.index  post  post.index  predLists  predLists.index  predicates  predicates.index  pso  pso.index  psot  psot.index  tr_predicates  tr_predicates.index
docker/data/data/repositories/GuardianExample/storage/history/: history  history.index
docker/data/data/repositories/GuardianExample/storage/literals-index/: dates  dates.index  numerics  numerics.index
docker/data/data/repositories/GuardianExample/storage/rdfrank/: state
docker/data/work/: runtime.properties
example/: qualitycontracts.ttl  valid_temperature_format.ttl
guardian/: config.py  config.yml  exceptions.py  guardian.py  logging.conf  models.py  query.py
tests/: frictionless_schema.yml  test_config.yml  test_file.ttl  test_file_2.ttl  test_guardian.py  test_guardian_config.py  test_guardian_utils.py  test_quality_constrain.py  test_query.py  test_schema.json
