[tool.poetry]
name = "guardian"
version = "0.1.0"
description = ""
authors = ["Rene Dorsch <rene.dorsch@iis.fraunhofer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandera = {extras = ["io"], version = "^0.16.1"}
rdflib = "<7.0.0"
pytest = "^7.4.0"
SPARQLWrapper = "^2.0.0"
luigi = "^3.3.0"
pyshacl = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
